converts AmenityStyles.css to AmenityStyles.scss neatening styling

--- a/web/src/features/hostonboarding/styles/onboardingHost.scss
+++ b/web/src/features/hostonboarding/styles/onboardingHost.scss
@@ -1,5 +1,7 @@
+$domits-guest-green: #0D9813;
 $domits-host-blue: #003366;
-$border-radius: 5px;
+
+$border-radius: 8px;
 $light-gray: #ccc;
 $input-time-gray: #2a2c2d;
 $white: #fff;
