--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -1,8 +1,5 @@
 .listing-details {
-
-  .main {
-    display: inline;
-  }
+  display: inline;
 
   .listing-details-header {
     display: flex;
@@ -10,10 +7,6 @@
     align-items: center;
     width: 100%;
     height: 60px;
-  }
-
-  .title {
-    margin-left: 10px;
   }
 
   /*
@@ -117,6 +110,7 @@
   }
 
   .price {
+    margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
   }
