--- a/web/src/features/auth/Register.css
+++ b/web/src/features/auth/Register.css
@@ -4,7 +4,7 @@
     width: 100%;
     padding: 8px 15px;
     margin-top: 15px;
-    background: var(--secondary-color);
+    background: var(--domits-host-blue);
     box-shadow: none;
     border-radius: 5px;
     border: none;
