--- a/web/src/features/bookingengine/styles/listing.css
+++ b/web/src/features/bookingengine/styles/listing.css
@@ -256,7 +256,7 @@
             height: 10%;
             border: none;
             border-radius: 2rem;
-            background: var(--primary-color);
+            background: var(--domits-guest-green);
             color: white;
             cursor: pointer;
         }
@@ -278,7 +278,7 @@
 }
 
 .reserve-button {
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     color: white; 
     padding: 12px 20px; 
     border: none;
@@ -326,7 +326,7 @@
 }
 
 .price {
-    color: var(--primary-color);
+    color: var(--domits-guest-green);
 }
 
 .placeName {
@@ -488,7 +488,7 @@
 }
 
 .backButton:hover {
-    color: var(--primary-color);
+    color: var(--domits-guest-green);
 }
 
 .disclaimer {
