--- a/web/src/styles/sass/auth/register.scss
+++ b/web/src/styles/sass/auth/register.scss
@@ -1,6 +1,6 @@
 // Variables
 $primary-color: #003366;
-$secondary-color: var(--secondary-color);
+$secondary-color: var(--domits-host-blue);
 $hover-secondary: #4a86c3;
 $error-color: red;
 $error-border-color: red;
