--- a/web/src/styles/sass/base/MenuBar.scss
+++ b/web/src/styles/sass/base/MenuBar.scss
@@ -1,5 +1,5 @@
-$primary-color: var(--primary-color);
-$secondary-color: var(--secondary-color);
+$primary-color: var(--domits-guest-green);
+$secondary-color: var(--domits-host-blue);
 $box-shadow: 0 0 5px hsl(0 0% 78%);
 $dropdown-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 $border-radius: 10px;
