--- a/web/src/styles/sass/booking-engine/listing.scss
+++ b/web/src/styles/sass/booking-engine/listing.scss
@@ -2,7 +2,7 @@ $primary-color: #003366;
 $box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 $border-radius: 8px;
 $border-color: #ddd;
-$primary-color: var(--primary-color);
+$primary-color: var(--domits-guest-green);
 $border-color: #ccc;
 $background-light: #f9f9f9;
 $shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
