--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -13,6 +13,13 @@
   text-align: center;
 }
 
+.Search-bar .Search-searchInputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0.3125rem;
+}
+
 .Search-suggestions-container {
   position: relative;
   z-index: 1;
@@ -27,7 +34,7 @@
 }
 
 .searchTitle {
-  color: var(--primary-color);
+  color: var(--domits-guest-green);
   font-size: 1rem;
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
@@ -46,10 +53,9 @@
 }
 
 .search-places-input {
-  background-color: none;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center ;
   margin: 0 auto;
   margin-top: 0.6rem;
   padding: 10px 5px;
@@ -60,14 +66,13 @@
 .search-places-input::placeholder {
   font-family: Kanit, sans-serif;
   text-align: center;
-  color: var(--primary-color);
+  color: var(--domits-guest-green);
   font-size: 1rem;
   font-weight: 500;
 }
-
 .search-places-input:focus {
-  outline: none;
-
+  outline: none; 
+  
 }
 
 .input-calendar {
@@ -125,10 +130,10 @@
   padding: 3px;
   font-size: 0.6rem;
   line-height: 1.875rem;
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--domits-guest-green);
   border-radius: 50%;
   color: #ffffff;
-  background-color: var(--primary-color);
+  background-color: var(--domits-guest-green);
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
   height: 2.5rem;
   width: 2.5rem;
@@ -175,7 +180,7 @@
 }
 
 .searchBar_inputfield::placeholder {
-  color: var(--primary-color);
+  color: var(--domits-guest-green);
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
   font-size: 1rem;
@@ -258,7 +263,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 0.40rem;
-  border-bottom: 1px solid var(--primary-color);
+  border-bottom: 1px solid var(--domits-guest-green);
 }
 
 .Search-guestCounter:last-child {
@@ -267,7 +272,7 @@
 
 .Search-guestLabel {
   font-size: 1rem;
-  color: var(--primary-color);
+  color: var(--domits-guest-green);
   text-align: left;
 }
 
@@ -308,7 +313,7 @@
 }
 
 .Search-guestCounter .Search-controls button:hover {
-  border-color: var(--primary-color);
+  border-color: var(--domits-guest-green);
 }
 
 /* test */
@@ -323,10 +328,10 @@
 
 .searchTitleGuest {
   position: absolute;
-  color: var(--primary-color);
+  color: var(--domits-guest-green);
   font-size: 1rem;
   font-weight: 500;
-  margin-top: 0.1rem;
+  padding-top: 0.3rem;
 }
 
 .Search-guestP {
@@ -351,13 +356,6 @@
 }
 
 @media (max-width: 768px) {
-  .Calendar-placeholder {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
   .Search-guest-dropdown {
     width: calc(120% - 1.875rem);
     left: 50%;
@@ -384,9 +382,15 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .responsive-calendar {
+    font-size: 0.6rem !important;
+  }
+}
+
 @media (max-width: 768px) {
   .responsive-calendar {
-    font-size: 0.7rem !important;
+    font-size: 0.5rem !important;
   }
 }
 
@@ -494,7 +498,7 @@
 
 @media (max-width: 768px) {
   .Search-bar {
-    border: 2px solid var(--primary-color);
+    border: 2px solid var(--domits-guest-green);
     width: 110%;
     max-width: 400px;
     transform: translateX(-0.9rem);
@@ -644,7 +648,7 @@
   }
 
   .search-icon {
-    margin-right: 10px;
+    margin-right: 12px;
     transform: translateY(15%);
   }
 }
@@ -730,118 +734,4 @@
   .DatePicker__input {
     padding-left: 0%;
   }
-}
-
-
-/* dit is de css van de react packages:  */
-.searchInputContainer .custom-select__control {
-  width: 8.8rem;
-  height: 2.7rem;
-  border: none;
-  outline: none;
-  box-shadow: none;
-  background: none;
-  padding: 0;
-  cursor: pointer;
-  margin: auto;
-  transform: translateY(7px);
-}
-
-
-@media (max-width: 768px) {
-  .custom-select__control {
-    width: 100%;
-    transform: translateX(0);
-  }
-}
-
-.searchInputContainer .custom-select__menu {
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-  margin-top: 1rem;
-  width: 15rem;
-  overflow-x: hidden;
-  overflow-y: auto;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 9999;
-}
-
-.searchInputContainer .custom-select__option {
-  background-color: white;
-  color: #666;
-  font-weight: normal;
-  font-size: 14px;
-  padding: 13.8px 16px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  border-radius: 10px;
-  gap: 15px;
-  cursor: pointer;
-  transition: transform 0.2s;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.searchInputContainer .custom-select__option:hover {
-  color: black;
-  background-color: #e6e6e6;
-}
-
-.searchInputContainer .custom-select__option--is-selected {
-  background-color: #f0f0f0;
-  color: black;
-  font-weight: 800;
-}
-
-.searchInputContainer .custom-select__single-value {
-  text-align: center;
-  font-weight: 500;
-  color: #000;
-  font-size: 1rem;
-}
-
-.searchInputContainer .custom-select__clear-indicator {
-  color: black;
-  font-size: 2rem;
-}
-
-.search-clear-guests {
-  position: absolute;
-  right: 0.5rem;
-  top: 50%;
-  transform: translateY(-35%);
-  border: none;
-  background: transparent;
-  cursor: pointer;
-}
-
-.Calendar-placeholder {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: var(--primary-color);
-  font-weight: 500;
-  font-size: 1rem;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  text-align: center;
-}
-
-.Search-close-guest-dropdown{
-  position: absolute;
-  padding: 0.3rem;
-  right: 10px;
-  top: 10px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 1.1rem;
 }
