--- a/web/src/features/guestdashboard/guestmessages/styles/guestContactList.css
+++ b/web/src/features/guestdashboard/guestmessages/styles/guestContactList.css
@@ -122,8 +122,8 @@
 
 .guest-contact-list-toggle button {
     background-color: white;
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
+    color: var(--domits-guest-green);
+    border: 1px solid var(--domits-guest-green);
     padding: 10px 20px;
     border-radius: 5%;
     cursor: pointer;
@@ -133,6 +133,6 @@
 }
 
 .guest-contact-list-toggle button.active {
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     color: white;
 }
