--- a/web/src/features/hostdashboard/HostHomepage.css
+++ b/web/src/features/hostdashboard/HostHomepage.css
@@ -109,13 +109,13 @@
 }
 
 .wijzer:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--domits-host-blue);
   color: white;
   transition: .3s;
 }
 
 .wijzer.active {
-  background-color: var(--secondary-color);
+  background-color: var(--domits-host-blue);
   color: white;
 }
 
