--- a/web/src/features/hostdashboard/HostReservations.module.css
+++ b/web/src/features/hostdashboard/HostReservations.module.css
@@ -49,7 +49,7 @@
 .reservationContent .selected, .reservationContent .option:hover {
     cursor: pointer;
     color: white;
-    background-color: var(--secondary-color);
+    background-color: var(--domits-host-blue);
     box-shadow: none;
 }
 
@@ -88,14 +88,14 @@
 
 .reservationContent .refreshBtn {
     color: white;
-    background-color: var(--secondary-color);
+    background-color: var(--domits-host-blue);
     border: none;
 }
 
 .reservationContent .refreshBtn:hover {
-    color: var(--secondary-color);
+    color: var(--domits-host-blue);
     background-color: white;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--domits-host-blue);
 }
 
 .reservationContent .btnBox {
@@ -104,7 +104,7 @@
     gap: 1em;
     padding: 0.75em;
     border-radius: 2em;
-    background-color: var(--secondary-color);
+    background-color: var(--domits-host-blue);
     color: white;
     align-items: center;
 }
@@ -135,7 +135,7 @@
 }
 
 .reservationContent .btnApprove:hover {
-    background-color: var(--secondary-color);
+    background-color: var(--domits-host-blue);
 }
 
 .reservationContent .btnGroup {
