--- a/web/src/features/hostdashboard/hostdistribution/styles/HostDistribution.css
+++ b/web/src/features/hostdashboard/hostdistribution/styles/HostDistribution.css
@@ -583,7 +583,7 @@
 }
 
 .channelNavigation button.active {
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     color: white;
 }
 
