--- a/web/src/features/hostonboarding/styles/onboardingHost.scss
+++ b/web/src/features/hostonboarding/styles/onboardingHost.scss
@@ -143,7 +143,7 @@ h2 {
 .radioInput {
   padding: 11px 15px;
   border-radius: 5px;
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--domits-host-blue);
 }
 
 .file-input {
