--- a/web/src/pages/careers/jobDetails.css
+++ b/web/src/pages/careers/jobDetails.css
@@ -27,7 +27,7 @@
 }
 
 .company-name {
-    color: var(--primary-color);
+    color: var(--domits-guest-green);
     font-size: 45px;
     font-weight: bold;
     display: block;
@@ -50,7 +50,7 @@
     padding: 10px 20px;
     font-size: 1em;
     color: white;
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     border-radius: 5px;
 }
 
@@ -100,7 +100,7 @@
 
 .resp-heading {
     font-size: 48px;
-    color: var(--primary-color);
+    color: var(--domits-guest-green);
     margin-bottom: 20px;
     font-weight: 600;
 }
@@ -112,7 +112,7 @@
 }
 
 .technologies {
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -139,7 +139,7 @@
 }
 
 .exp-heading {
-    color: var(--primary-color);
+    color: var(--domits-guest-green);
     font-size: 48px;
     font-weight: 600;
 }
