--- a/web/src/pages/helpdesk/helpdesk.css
+++ b/web/src/pages/helpdesk/helpdesk.css
@@ -12,7 +12,7 @@
 .helpSearchInput {
   width: 100%;
   padding: 15px 10px;
-  border: 2px solid var(--primary-color);
+  border: 2px solid var(--domits-guest-green);
   border-radius: 5px;
 }
 
@@ -20,7 +20,7 @@
   position: absolute;
   border-radius: 5px;
   border: none;
-  background-color: var(--primary-color);
+  background-color: var(--domits-guest-green);
   color: white;
   font-weight: 500;
   right: 1px;
