--- a/web/src/pages/productupdates/release.css
+++ b/web/src/pages/productupdates/release.css
@@ -28,7 +28,7 @@
 }
 
 .release__button {
-  background-color: var(--primary-color);
+  background-color: var(--domits-guest-green);
   color: white;
   border: none;
   padding: 10px 20px;
@@ -39,7 +39,7 @@
 }
 
 .release__button:hover {
-  background-color: var(--primary-color);
+  background-color: var(--domits-guest-green);
 }
 
 .release__image-header {
