--- a/web/src/utils/PageSwitcher.module.css
+++ b/web/src/utils/PageSwitcher.module.css
@@ -57,7 +57,7 @@
 }
 
 .pagination .active {
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     color: #fff;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .listingEdit {
-    background-color: var(--primary-color);
+    background-color: var(--domits-guest-green);
     cursor: pointer;
 }
 
@@ -102,7 +102,7 @@
 }
 
 .listingDraft {
-    background-color: var(--secondary-color);
+    background-color: var(--domits-host-blue);
     cursor: pointer;
 }
 
