--- a/web/src/features/hostdashboard/HostRevenueStyle.css
+++ b/web/src/features/hostdashboard/HostRevenueStyle.css
@@ -31,7 +31,7 @@
     grid-template-columns: 1fr 2fr;
     grid-auto-rows: auto; /* This allows new rows to be created as needed */
     gap: 20px;
-    margin-top: 20px;
+    margin: 20px 0px;
 }
 
 .hr-revenue-overview {
@@ -58,11 +58,13 @@
 }
 
 .hr-monthly-comparison {
-    grid-column: 2 / 3;
+    grid-column: 2 / 5;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-right: 200px;
+    width: 850px;
 }
 
 .hr-monthly-comparison h3 {
@@ -80,6 +82,7 @@
     border-radius: 10px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 90%;
 }
 
 .hr-card {
