Adds house rules and check in and check out time

--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -12,6 +12,7 @@
   .description {
     overflow: hidden;
     transition: max-height 0.3s ease;
+    font-size: large;
   }
 
   .collapsed {
@@ -140,6 +141,7 @@
     margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
+    color: var(--primary-color);
   }
 
   .price-night {
@@ -149,6 +151,7 @@
   .details {
     margin-bottom: 10px;
     color: #666;
+    font-size: medium;
   }
 
   /*
@@ -302,5 +305,26 @@
     .essential-amenities-container {
       grid-template-columns: 1fr;
     }
+  }
+
+  .rules-title {
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  .rules {
+    margin-bottom: 10px;
+    color: #666;
+    font-size: medium;
+  }
+
+  .rules-check-in-check-out-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
 }
