--- a/web/src/styles/sass/base/SearchBar.scss
+++ b/web/src/styles/sass/base/SearchBar.scss
@@ -5,6 +5,7 @@ $shadow-default: 0 0 5px hsl(0 0% 78%);
 $shadow-dropdown: 0 4px 8px rgba(0, 0, 0, 0.4);
 $primary-domits-color: #0d9813;
 
+
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -46,11 +47,8 @@ $primary-domits-color: #0d9813;
   height: 3.43rem;
   background-color: white;
 
-  > div {
+  >div {
     position: relative;
-    transition:
-      background 150ms ease,
-      width 150ms ease;
 
     &::before {
       position: absolute;
@@ -195,7 +193,7 @@ $primary-domits-color: #0d9813;
 
   .Search-error-message {
     background-color: #f8d7da;
-    color: #721c24;
+    color: #ff0019;
     border: 2px solid #f5c6cb;
     padding: 24px 36px;
     border-radius: 16px;
@@ -221,8 +219,8 @@ $primary-domits-color: #0d9813;
     border-radius: $border-radius-lg;
     padding: 1.5625rem;
     z-index: 999;
-    width: 25.125rem;
-    min-width: 15.625rem;
+    width: 25rem;
+    min-width: 15rem;
     box-sizing: border-box;
     cursor: auto;
 
@@ -350,7 +348,7 @@ $primary-domits-color: #0d9813;
     padding: 0.6rem;
     box-sizing: border-box;
 
-    > div::before {
+    >div::before {
       display: none;
     }
 
@@ -465,6 +463,7 @@ $primary-domits-color: #0d9813;
   }
 
   @media (max-width: 1500px) {
+
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 10px !important;
@@ -472,6 +471,7 @@ $primary-domits-color: #0d9813;
   }
 
   @media (max-width: 1200px) {
+
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 7px !important;
@@ -479,6 +479,7 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
+
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 1rem !important;
@@ -486,6 +487,7 @@ $primary-domits-color: #0d9813;
   }
 
   @media (min-width: 2500px) {
+
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 15px !important;
@@ -493,6 +495,7 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
+
     .input-calendar-checkInOut,
     .DatePicker__input {
       font-size: 0.5rem;
@@ -500,6 +503,7 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
+
     .Search-button-section,
     .searchSelectContainer,
     .Search-check-in-out {
@@ -570,7 +574,7 @@ $primary-domits-color: #0d9813;
       margin-top: 0.5rem;
     }
 
-    .Search-bar-main > div::before {
+    .Search-bar-main>div::before {
       background: transparent;
     }
 
@@ -653,7 +657,8 @@ $primary-domits-color: #0d9813;
       margin-bottom: 0.5rem;
       text-overflow: ellipsis;
     }
-    .Search-bar-main > div::before {
+
+    .Search-bar-main>div::before {
       display: none;
     }
   }
@@ -772,73 +777,72 @@ $primary-domits-color: #0d9813;
     cursor: pointer;
     font-size: 1.1rem;
   }
-}
 
-.responsive-calendar {
-  font-size: 11px !important;
-}
 
-.DatePicker {
-  position: relative;
-  display: inline-block;
-  z-index: 100;
-  height: 0.1%;
-}
+  .responsive-calendar {
+    font-size: 11px !important;
+  }
 
-.DatePicker__calendarContainer.-top {
-  height: 4vh;
-}
+  .DatePicker {
+    position: relative;
+    display: inline-block;
+    z-index: 100;
+    height: 0.1%;
+  }
 
-.DatePicker__input {
-  position: relative;
-  background: transparent;
-  font-size: 12px;
-  border: 1px solid transparent;
-  outline: none;
-  width: 80%;
-  text-align: center;
-  transform: translateY(-3.77rem);
-  padding-bottom: 1rem;
-  color: transparent;
-  cursor: pointer;
-  height: 2.3rem;
-}
+  .DatePicker__calendarContainer.-top {
+    height: 4vh;
+  }
 
-.DatePicker__input::selection {
-  background: transparent;
-}
+  .DatePicker__input {
+    position: relative;
+    background: transparent;
+    font-size: 12px;
+    border: 1px solid transparent;
+    outline: none;
+    width: 80%;
+    text-align: center;
+    transform: translateY(-3.77rem);
+    padding-bottom: 1rem;
+    color: transparent;
+    cursor: pointer;
+    height: 2.3rem;
+  }
 
-.DatePicker__input::placeholder {
-  color: transparent;
-}
+  .DatePicker__input::selection {
+    background: transparent;
+  }
 
-.Calendar__monthYear > * {
-  font-size: 1.4em;
-  color: black;
-}
+  .DatePicker__input::placeholder {
+    color: transparent;
+  }
 
-.Calendar__yearSelectorText {
-  border: none;
-  font-size: 1em;
-  min-width: 85%;
-  padding: 0.2em 0.5em;
-  border-radius: 8.5px;
-}
+  .Calendar__monthYear>* {
+    font-size: 1.4em;
+    color: black;
+  }
 
-.Calendar__monthSelectorItemText {
-  font-size: 0.8em;
-}
+  .Calendar__yearSelectorText {
+    border: none;
+    font-size: 1em;
+    min-width: 85%;
+    padding: 0.2em 0.5em;
+    border-radius: 8.5px;
+  }
 
-.Calendar__sectionWrapper {
-  position: relative;
-  min-height: 25.4em;
-  overflow: hidden;
-}
+  .Calendar__monthSelectorItemText {
+    font-size: 0.8em;
+  }
 
-.Calendar__day.-weekend:not(.-selected):not(.-blank):not(.-selectedStart):not(
-    .-selectedEnd
-  ):not(.-selectedBetween) {
-  color: inherit;
+  .Calendar__sectionWrapper {
+    position: relative;
+    min-height: 25.4em;
+    overflow: hidden;
+  }
+
+  .Calendar__day.-weekend:not(.-selected):not(.-blank):not(.-selectedStart):not(.-selectedEnd):not(.-selectedBetween) {
+    color: inherit;
+  }
 }
 
 .mobile-search-button {
