--- a/web/src/features/hostdashboard/HostDashboard.module.css
+++ b/web/src/features/hostdashboard/HostDashboard.module.css
@@ -3,15 +3,18 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
+
 .welcomeMsg {
     padding: 0;
 }
+
 .dashboardHost {
     display: flex;
     justify-content: flex-start;
     gap: 5rem;
     width: 100%;
 }
+
 .dashboardContainer {
     width: 100%;
     display: flex;
@@ -20,21 +23,25 @@
     justify-content: center;
     gap: 4em;
 }
+
 .dashboardLeft {
     display: flex;
     flex-direction: column;
     gap: 2em;
     animation: fade-up 2s;
 }
+
 .dashboardRight {
     animation: fade-up 4s;
 }
+
 .personalInfoContent {
     display: flex;
     flex-direction: column;
     margin-left: 1px;
     width: 100%;
 }
+
 .personalInfoBox {
     background-color: #fff;
     border-radius: 15px;
@@ -44,9 +51,11 @@
     width: auto;
     font-size: 0.9em;
 }
+
 .personalInfoBox span {
     margin-right: auto;
 }
+
 .buttonBox {
     display: flex;
     flex-direction: row;
@@ -54,6 +63,7 @@
     gap: 5%;
     border-radius: 1rem;
 }
+
 .dashboardCard {
     height: 35vh;
     width: 17vw;
@@ -61,6 +71,7 @@
     border-radius: 0.5em;
     position: relative;
 }
+
 .accommodationText {
     padding: 0.25em;
     width: 80%;
@@ -76,17 +87,20 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .accommodationTitle {
     color: white;
     margin: 0;
     font-size: 0.75em;
     background-color: black;
 }
+
 .accommodationLocation {
     color: white;
     font-size: 0.6em;
     margin-top: 1%;
 }
+
 .accommodationImg {
     max-height: 70%;
     max-width: none;
@@ -96,18 +110,23 @@
     width: 100%;
     height: 70%;
 }
+
 .accommodationDetails {
     padding: 10px;
 }
+
 .accommodationDetails p {
     font-size: 0.75rem;
 }
+
 .isDrafted {
     color: var(--secondary-color);
 }
+
 .isLive {
     color: var(--secondary-color);
 }
+
 .greenBtn {
     color: white;
     background-color: var(--secondary-color);
@@ -116,25 +135,30 @@
     border-radius: 10px;
     cursor: pointer;
 }
+
 .greenBtn:hover {
     opacity: 90%;
 }
+
 .infoBox {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 1em;
 }
+
 .infoIcon {
     max-width: 1.5em;
     max-height: 1.5em;
 }
+
 .alertMessage {
     margin: 15px;
     font-weight: bold;
     text-align: center;
     font-size: 1.5rem;
 }
+
 .wijzer {
     display: flex;
     flex-direction: row;
@@ -151,9 +175,11 @@
     font-size: 0.75em;
     text-align: center;
 }
+
 .header {
     font-size: 1.75em;
 }
+
 .imgSliderImage {
     border-radius: 2em;
     height: auto;
@@ -163,9 +189,11 @@
     padding: 1em;
     transition: opacity 1s ease-in-out;
 }
+
 .visible {
     opacity: 1;
 }
+
 .hostListingContainer {
     width: 100%;
     display: flex;
@@ -173,22 +201,26 @@
     flex-wrap: wrap;
     gap: 4em;
 }
+
 .listingBody {
     display: flex;
     flex-direction: column;
 }
+
 .listingsDisplay {
     box-shadow: 0 2px 8px 0 #63636333;
     border-radius: 1rem;
     padding: 1rem;
     margin-top: 5%;
 }
+
 .loadingContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 2rem;
 }
+
 .spinner {
     max-width: 25vw;
     max-height: 25vh;
@@ -199,47 +231,60 @@
         flex-direction: column;
         align-items: center;
     }
+
     .dashboardHost {
         flex-direction: column;
         gap: 2rem;
     }
+
     .dashboardContainer {
         flex-direction: column;
         gap: 2em;
     }
-    .dashboardLeft, .dashboardRight {
+
+    .dashboardLeft,
+    .dashboardRight {
         width: 100%;
         gap: 1em;
     }
+
     .dashboardCard {
         height: auto;
         width: 80vw;
     }
+
     .accommodationText {
         width: 90%;
     }
+
     .accommodationImg {
         height: auto;
     }
+
     .buttonBox {
         flex-direction: column;
         gap: 1rem;
         padding: 1rem;
     }
+
     .greenBtn {
         width: 100%;
     }
+
     .infoBox {
         flex-direction: column;
         align-items: flex-start;
     }
+
     .hostListingContainer {
         flex-direction: column;
         gap: 2rem;
     }
+
     .listingsDisplay {
         margin-top: 2%;
     }
+
     .imgSliderImage {
         max-width: 100%;
         max-height: 20vh;
@@ -251,30 +296,39 @@
         height: auto;
         width: 90vw;
     }
+
     .accommodationText {
         font-size: 0.65em;
     }
-    .personalInfoContent{
+
+    .personalInfoContent {
         display: flex;
         flex-direction: column;
         margin-left: 0.5px;
         width: 90vw;
     }
-    .accommodationTitle, .accommodationLocation {
+
+    .accommodationTitle,
+    .accommodationLocation {
         font-size: 0.6em;
     }
+
     .dashboardContainer {
         gap: 1em;
     }
+
     .welcomeMsg {
         font-size: 0.8rem;
     }
+
     .alertMessage {
         font-size: 1.2rem;
     }
+
     .header {
         font-size: 1.5em;
     }
+
     .wijzer {
         width: 150px;
         font-size: 0.65em;
