Landing page header optimalization
Replaced the landing page specific header with the general header, and added a function that prevents the searchbar from rendering when on the landing page ("/" in the routing).

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -1,12 +1,13 @@
+//Booking-engine
 @use "booking-engine/imagegallery.scss";
 @use "booking-engine/listing.scss";
 @use "booking-engine/bookingoverview.scss";
 @use "booking-engine/paymentConfirmPage.scss";
-
+//Base
 @use "base/header.scss";
 @use "base/footer.scss";
 @use "base/MenuBar.scss";
-
+//Auth
 @use "auth/login.scss";
 @use "auth/register.scss";
 
