--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -59,12 +59,13 @@
    }
   
   body {
-    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    margin-top: 80px;
+    // margin: auto;
   }
   
   code {
